# csv2vcard

./: .gitignore  DESCRIPTION.md  LICENSE.txt  README.md  README.rst  codecov.yml  csv_to_vcard.py  excel_to_vcard.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
csv-to-vcard/: csv_to_vcard.py
csv2vcard/: __init__.py  __main__.py  cli.py  create_vcard.py  csv2vcard.py  exceptions.py  export_vcard.py  mapping.py  models.py  parse_csv.py  utils.py  validators.py
tests/: __init__.py  conftest.py  test_cli.py  test_create_vcard.py  test_csv2vcard.py  test_export_vcard.py  test_mapping.py  test_models.py  test_parse_csv.py  test_utils.py  test_validators.py
tests/fixtures/: valid_contacts.csv
