[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv2vcard"
version = "0.4.0"
description = "A library for converting CSVs to vCards (vCard 3.0 and 4.0)"
readme = "DESCRIPTION.md"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    { name = "tech4242" }
]
keywords = ["csv", "vcard", "contacts", "export", "vcf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
cli = ["typer>=0.9.0"]
encoding = ["charset-normalizer>=3.0.0"]
all = ["typer>=0.9.0", "charset-normalizer>=3.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "typer>=0.9.0",
    "charset-normalizer>=3.0.0",
]

[project.scripts]
csv2vcard = "csv2vcard.cli:app"

[project.urls]
"Homepage" = "https://github.com/tech4242/csv2vcard"
"Bug Tracker" = "https://github.com/tech4242/csv2vcard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["csv2vcard*"]

[tool.setuptools.package-data]
csv2vcard = ["py.typed"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# cli.py uses Optional[X] for Python 3.9 compatibility with Typer runtime type evaluation
"csv2vcard/cli.py" = ["UP045"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=csv2vcard --cov-report=term-missing"
